err/pyxis.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/pyxis'...
Compiling './lib/python3.5/site-packages/pyxis/Config.py'...
***   File "./lib/python3.5/site-packages/pyxis/Config.py", line 98
    print '\n' + bold + 'Welcome to Pyxis Setup\n' + normal
             ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/pyxis/Interface.py'...
***   File "./lib/python3.5/site-packages/pyxis/Interface.py", line 108
    print "Invalid station name. Type 'list' to see available station names"
                                                                           ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/pyxis/ProviderCanada.py'...
***   File "./lib/python3.5/site-packages/pyxis/ProviderCanada.py", line 76
    print "Login Error token not found:, see Auth-ERROR.html"
                                                            ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/pyxis/ProviderUSA.py'...
*** Sorry: TabError: inconsistent use of tabs and spaces in indentation (ProviderUSA.py, line 34)
Compiling './lib/python3.5/site-packages/pyxis/Sirius.py'...
***   File "./lib/python3.5/site-packages/pyxis/Sirius.py", line 37
    print 'Missing dependency: BeautifulSoup'
                                            ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/pyxis/StreamHandler.py'...
***   File "./lib/python3.5/site-packages/pyxis/StreamHandler.py", line 44
    print "Cannot find media player: " + self.settings.command
                                     ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/pyxis-0.2.1.egg-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
